--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
         <!-- Callout -->
         <section class="callout">
             <h1>The finest whiskeys delivered to your doorstep.</h1>
-            <p>Sign up today to start receiving the world's best whiskeys every month. First one is free!</p>
+            <p class="lead">Sign up today to start receiving the world's best whiskeys every month. <s>£19.99</s> <strong><mark>First one is free!</mark></strong></p>
+            <button class="btn btn-success btn-lg">Sign up</button>
+            <p class="text-muted"><small>You must be over 18 to sign up to our service. Please, drink responsibly.</small></p>
         </section>
         <!-- /.callout -->
         <hr>
@@ -22,35 +24,74 @@
         <!-- Quotes -->
         <section class="quotes">
             <h2 class="text-uppercase">Quotes:</h2>
-            <div class="quote">
+            <blockquote class="blockquote">
                 <p>I've been introduced to more than 10 great international whiskeys I never knew about.</p>
                 <p>- Jane Doe</p>
-            </div>
-            <div class="quote">
+            </blockquote>
+            <dlockquoteiv class="blockquote">
                 <p>I haven't been sober for months!</p>
                 <p>- Jane Doe</p>
-            </div>
+            </lockquote>
         </section>
         <!-- /.quotes -->
         <hr>
 
         <!-- Features -->
         <section class="features">
-            <h2>Features:</h2>
+            <h2 class="text-uppercase">Features:</h2>
             <div class="feature">
                 <h3>Feature 1</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             </div>
+            <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
             <div class="feature">
                 <h3>Feature 2</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             </div>
+            <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
             <div class="feature">
                 <h3>Feature 3</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             </div>
+            <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
         </section>
         <!-- /.features -->
+        <hr>
+
+        <section class="monthly-favourites">
+            <h2 class="text-uppercase">Monthly Favourites:</h2>
+            <table class="table">
+                <thead>
+                  <tr>
+                    <th scope="col">Name</th>
+                    <th scope="col">Origin</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>Jack Daniels</td>
+                    <td>Tennesse</td>
+                  </tr>
+                  <tr>
+                    <td>Elijah Craig</td>
+                    <td>Scotland</td>
+                  </tr>
+                  <tr>
+                    <td>Jameson</td>
+                    <td>Ireland</td>
+                  </tr>
+                  <tr>
+                    <td>Fireball</td>
+                    <td>Miami</td>
+                  </tr>
+                  <tr>
+                    <td>S O W</td>
+                    <td>your mum</td>
+                  </tr>
+                </tbody>
+              </table>
+        </section>
+        
     </article>
 </body>
 
